--- a/api/package.json
+++ b/api/package.json
@@ -11,11 +11,14 @@
   "author": "flportilla",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
